# framepiler

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
docs/: glossary.md  (+11 more)
framec/: Cargo.toml  build.rs
framec/src/: lib.rs
framec/src/frame_c/: cli.rs  config.rs  driver.rs  mod.rs  utils.rs
framec/tests/: c_snapshots.rs  cpp_snapshots.rs  csharp_snapshots.rs  dart_snapshots.rs  erlang_snapshots.rs  gdscript_snapshots.rs  go_snapshots.rs  java_snapshots.rs  javascript_snapshots.rs  kotlin_snapshots.rs  lua_snapshots.rs  php_snapshots.rs  python_snapshots.rs  ruby_snapshots.rs  rust_snapshots.rs  swift_snapshots.rs  typescript_snapshots.rs
framec/tests/common/: mod.rs
framec/tests/fixtures/: 01_linear_fsm.frm  02_hsm.frm  03_persist.frm  04_state_args.frm  05_pushpop.frm  06_selfcall.frm  07_forward.frm  08_lifecycle.frm  09_return_explicit.frm  10_actions.frm  11_consts.frm  12_no_persist.frm
framec/tests/snapshots/: c_snapshots__actions.snap  c_snapshots__consts.snap  c_snapshots__forward.snap  c_snapshots__hsm.snap  c_snapshots__lifecycle.snap  c_snapshots__linear_fsm.snap  c_snapshots__no_persist.snap  c_snapshots__persist.snap  c_snapshots__pushpop.snap  c_snapshots__return_explicit.snap  c_snapshots__selfcall.snap  c_snapshots__state_args.snap  cpp_snapshots__actions.snap  cpp_snapshots__consts.snap  cpp_snapshots__forward.snap  cpp_snapshots__hsm.snap  cpp_snapshots__lifecycle.snap  cpp_snapshots__linear_fsm.snap  cpp_snapshots__no_persist.snap  cpp_snapshots__persist.snap  (+196 more)
(+399 files in other folders)
